Update: url & query/path
